# MyMolt

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HARDENING_PLAN.md  OPERATIONS_GUIDE.md  PATENT-PRIORITY.md  README.md  RUN_TESTS.md  SECURITY.md  TESTING_TELEGRAM.md  quick_test.sh  test_telegram_integration.sh
.github/workflows/: release.yml
data/meta/: 0a83b3f5-fba8-49b1-b88c-eb7f90a70654.json  19f9db34-3c12-4e7e-8f82-40c32464a061.json  21f3ab70-b468-46b7-9c59-90987884d53a.json  2c522003-7d9b-4c33-a130-edd2b65eee76.json  3eddea40-f288-487b-9ec0-f7146229326e.json  a49d31cb-6e4b-44a2-ae96-6f064a174fa3.json  c6570fb2-780c-4715-8270-a0dfa5bb8d11.json  d9fce98c-6b73-4c21-bd35-318d64c55d7a.json  f19e8e53-3630-4ac0-8d5d-9fb964d8b6d1.json
data/vault/: 0a83b3f5-fba8-49b1-b88c-eb7f90a70654.age  19f9db34-3c12-4e7e-8f82-40c32464a061.age  21f3ab70-b468-46b7-9c59-90987884d53a.age  2c522003-7d9b-4c33-a130-edd2b65eee76.age  3eddea40-f288-487b-9ec0-f7146229326e.age  a49d31cb-6e4b-44a2-ae96-6f064a174fa3.age  c6570fb2-780c-4715-8270-a0dfa5bb8d11.age  d9fce98c-6b73-4c21-bd35-318d64c55d7a.age  f19e8e53-3630-4ac0-8d5d-9fb964d8b6d1.age
deploy/: install.sh  mymolt.service  zeroclaw.service
deployment/: Caddyfile  mymolt.service
design/: FINAL_DESIGN.md
dev/: README.md  ci.sh  cli.sh  config.template.toml
docs/: TEST_REPORT.md  agnostic-security.md  audit-logging.md  frictionless-security.md  pr-workflow.md  resource-limits.md  reviewer-playbook.md  sandboxing.md  security-roadmap.md
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
extension/: manifest.json  package.json  tsconfig.json
extension/dns/: rules.json
extension/src/: popup.html  service-worker.ts  sidepanel.html
extension/src/content/: inject.css  inject.ts
extension/src/dns/: shield.ts
extension/src/popup/: Popup.tsx
extension/src/shared/: api.ts  types.ts
extension/src/sidebar/: Sidebar.tsx  index.tsx
extension/src/vault/: autofill.ts
frontend/: index.html  output.css  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  i18n.ts  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: daemon.rs  lib.rs  main.rs
frontend/src/api/: client.ts  tauri-bridge.ts
frontend/src/components/: VPNManager.tsx  WalletConnect.tsx
frontend/src/components/admin/: FamilyManager.tsx  IdentityManager.tsx  McpManager.tsx  ProviderConfig.tsx  SecurityDashboard.tsx  SystemOverview.tsx
frontend/src/components/layout/: Header.tsx  PairingScreen.tsx  Sidebar.tsx
frontend/src/components/modals/: EidasUploadModal.tsx  IntegrationConfigModal.tsx
frontend/src/components/ui/: Mascot.tsx  StatusCard.tsx  VoiceButton.tsx
frontend/src/components/widgets/: AdBlockWidget.tsx  BrowserAnswerPanel.tsx  BrowserNavBar.tsx  BrowserWidget.tsx  ChatWidget.tsx  DiaryWidget.tsx  FilesWidget.tsx  IdentityWidget.tsx  ModelTuningWidget.tsx  SchedulerWidget.tsx  SigilWidget.tsx  VPNWidget.tsx  VaultWidget.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAudio.ts  useAuth.ts  useSocket.ts
frontend/src/pages/: AdminPanel.tsx  Dashboard.tsx  Integrations.tsx  Lobby.tsx  Security.tsx  Skills.tsx
public/: index.html
src/: bench_perf.rs  lib.rs  main.rs  migration.rs  util.rs
src/agent/: loop_.rs  mod.rs
src/channels/: cli.rs  discord.rs  email_channel.rs  imessage.rs  irc.rs  matrix.rs  mod.rs  slack.rs  telegram.rs  traits.rs  whatsapp.rs
src/config/: mod.rs  schema.rs
src/cron/: mod.rs  scheduler.rs
src/daemon/: hoodik.rs  mod.rs
src/doctor/: mod.rs
src/gateway/: mod.rs
src/gateway/api/: admin.rs  auth.rs  browse.rs  family.rs  handlers.rs  mcp.rs  mod.rs  proxy.rs  security.rs  types.rs  vpn.rs  ws.rs
src/hardware/: mod.rs
src/health/: mod.rs
src/heartbeat/: engine.rs  mod.rs
src/identity/: aieos.rs  crypto.rs  family.rs  mod.rs  oidc.rs  oidc_generic.rs  roles.rs  soul.rs  ssi.rs
src/integrations/: mod.rs  registry.rs
src/mcp/: bridge.rs  gatekeeper.rs  mod.rs  transport.rs
src/memory/: chunker.rs  embeddings.rs  hygiene.rs  markdown.rs  mod.rs  scoped.rs  simple.rs  sovereign.rs  sqlite.rs  traits.rs  vector.rs
src/network/: adblock.rs  mod.rs  vpn.rs
src/observability/: log.rs  mod.rs  multi.rs  noop.rs  otel.rs  traits.rs  verbose.rs
src/onboard/: mod.rs  wizard.rs
src/providers/: anthropic.rs  compatible.rs  gemini.rs  mock_voice.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  reliable.rs  router.rs  stt.rs  traits.rs
src/runtime/: docker.rs  mod.rs  native.rs  traits.rs
src/security/: audit.rs  bubblewrap.rs  confirmation.rs  detect.rs  docker.rs  firejail.rs  landlock.rs  mod.rs  pairing.rs  policy.rs  secrets.rs  sigil_bridge.rs  traits.rs  vault.rs  workers.rs
src/service/: mod.rs
src/skillforge/: evaluate.rs  integrate.rs  mod.rs  scout.rs
src/skills/: mod.rs  symlink_tests.rs
src/tools/: browser.rs  browser_open.rs  composio.rs  delegate.rs  file_read.rs  file_write.rs  git_operations.rs  http_request.rs  image_info.rs  memory_forget.rs  memory_recall.rs  memory_store.rs  mod.rs  pim.rs  screenshot.rs  security.rs  shell.rs  traits.rs
src/tunnel/: cloudflare.rs  custom.rs  mod.rs  ngrok.rs  none.rs  tailscale.rs  wireguard.rs
tests/: api_handlers_test.rs  dockerignore_test.rs  memory_comparison.rs  redaction_test.rs  sovereign_intercept_test.rs  sovereignty_test.rs  whatsapp_webhook_security.rs
