[package]
name = "mymolt-core"
version = "0.1.0"
edition = "2021"
authors = ["MyMolt Contributors", "benjaminkuettner"]
license = "EUPL-1.2"
description = "MyMolt Core - The sovereign, EU-compliant AI agent infrastructure based on ZeroClaw."
repository = "https://github.com/beykuet/MyMolt"
readme = "README.md"
keywords = ["ai", "agent", "privacy", "eidas", "sovereignty"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }

# Async runtime - feature-optimized for size
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Config
directories = "5.0"
toml = "1.0"
shellexpand = "3.1"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# Observability - Prometheus metrics
prometheus = { version = "0.14", default-features = false }

# Base64 encoding (screenshots, image data)
base64 = "0.22"

# Optional Rust-native browser automation backend
fantoccini = { version = "0.22.0", optional = true, default-features = false, features = ["rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID generation
uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Landlock (Linux sandbox) - optional dependency
landlock = { version = "0.4", optional = true }

# Memory / persistence
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
cron = "0.12"

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.15"

# Hardware discovery (device path globbing)
glob = "0.3"

# Discord WebSocket gateway
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hostname = "0.4.2"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11.2"
rustls = "0.23"
rustls-pki-types = "1.14.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "multipart"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["cors", "fs", "limit", "timeout"] }
http-body-util = "0.1"

# OpenTelemetry — OTLP trace + metrics export
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-blocking-client"] }
k256 = { version = "0.13.4", features = ["ecdsa", "serde", "pem"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["use_pem"] }
rand = "0.8"
futures = "0.3.32"
serde_urlencoded = "0.7.1"
async-trait = "0.1.89"
didkit = "0.6.0"
ssi = "0.15.0"
x25519-dalek = { version = "2.0.0", features = ["serde", "static_secrets"] }
rand_core = { version = "0.6", features = ["std"] }

[features]
default = []
browser-native = ["dep:fantoccini"]

# Sandbox backends (platform-specific, opt-in)
sandbox-landlock = ["landlock"]  # Linux kernel LSM
sandbox-bubblewrap = []         # User namespaces (Linux/macOS)

# Full security suite
security-full = ["sandbox-landlock"]

[[bin]]
name = "mymolt"
path = "src/main.rs"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Remove debug symbols
panic = "abort"     # Reduce binary size

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
